# only-bt-scan

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BLUEY_INTEGRATION.md  BTLEPLUG_IMPLEMENTATION.md  COMPLETION_SUMMARY.txt  Cargo.toml  DATA_MODELS.md  DEVICE_TRACKER_QUICKREF.md  FILES.md  GCICaptureWindows.md  HCI_SUPPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_TODO.md  INTEGRATION_GUIDE_RAW_PACKETS.md  L2CAP_CHANNELS.md  MAC_ADDRESS_HANDLER.md  MANUAL_RAW_PACKET_PROCESSING.md  MEMORY.md  PCAP_EXPORT.md  PROJECT_COMPLETION.txt  PROJECT_STATUS.md  RAW_PACKET_CAPTURE_STRATEGY.md  RAW_PACKET_GUIDE.md  RAW_PACKET_IMPLEMENTATION_SUMMARY.md  RAW_PACKET_QUICK_REFERENCE.md  RAW_PACKET_SYSTEM.md  README.md  RESPONSE_TIME_GUIDE.md  SESSION_SUMMARY.md  SPEC.md  STATUS_REPORT.md  TASKS.md  TELEMETRIA.md  TROUBLESHOOTING_GUIDE.md  bluetooth_scan.db-shm  bluetooth_scan.db-wal  build-run.ps1  build_output.txt  (+21 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: Rust Expert Developer.agent.md
examples/: ble_simulator.rs  btleplug_device_tracker.rs  check_db.rs  concurrency_test.rs  parse_raw_packets.rs  test_raw_packets.rs  windows_raw_scan.rs
frontend/: api.js  app.js  devices.js  index.html  modals.js  packets.js  rssi.js  styles.css  websocket.js  ws_demo.html
src/: adapter_info.rs  adapter_manager.rs  advertising_parser.rs  android_ble_bridge.rs  async_scanner.rs  background.rs  ble_security.rs  ble_uuids.rs  bluetooth_features.rs  bluetooth_manager.rs  bluetooth_scanner.rs  bluey_integration.rs  class_of_device.rs  company_id_reference.rs  company_ids.rs  config_params.rs  core_bluetooth_integration.rs  data_flow_estimator.rs  data_models.rs  db.rs  db_frames.rs  db_pool.rs  db_writer.rs  device_events.rs  device_tracker.rs  env_config.rs  event_analyzer.rs  gatt_client.rs  hci_packet_parser.rs  hci_realtime_capture.rs  hci_scanner.rs  hci_sniffer_example.rs  html_report.rs  interactive_ui.rs  l2cap_analyzer.rs  lib.rs  link_layer.rs  logger.rs  mac_address_handler.rs  main.rs  (+23 more)
tests/: ble_parser_real_data.rs  diagnostic.rs
