[package]
name = "only-bt-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bluetooth scanning
btleplug = "0.11"
bluey = { git = "https://github.com/rib/bluey.git", optional = true }

# L2CAP channel extraction (Apple CoreBluetooth + cross-platform)
core_bluetooth = { version = "0.1", optional = true }
bluest = { version = "0.6", optional = true }

# Advanced HCI control
trouble = { version = "0.0.0", optional = true }
hci = { version = "0.1", optional = true }  # Raw HCI packet parsing
btsnoop-extcap = { version = "0.1", optional = true }  # PCAP/Wireshark export
mac_conditions = { version = "1.0" }  # MAC address parsing and filtering
android-ble = { version = "0.1", optional = true }  # Android Bluetooth comprehensive support

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# UUID handling
uuid = { version = "1.0", features = ["v4", "serde"] }

# Telegram bot
teloxide = { version = "0.17", features = ["macros"] }
reqwest = { version = "0.11", features = ["json", "multipart", "native-tls"], default-features = false }
urlencoding = "2.1"

# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-web-actors = "4.2"
actix = "0.13"

# Logging
log = "0.4"
env_logger = "0.11"
colored = "2.1"
lazy_static = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random generation
rand = "0.8"

# Lazy initialization
once_cell = "1.19"

# Configuration
dotenv = "0.15"

# Unicode support
regex = "1.0"

# Terminal UI & interactivity
crossterm = "0.27"
clearscreen = "2.0"
ctrlc = "3.4"
hostname = "0.3"

# BLE Peripheral (create BLE servers)
ble-peripheral-rust = "0.2"

# BTSnoop parser for analyzing Bluetooth logs
btsnoop_parser = "1.0"

# Meshtastic: Mesh networking protocol (LoRa + Bluetooth)
meshtastic = { version = "0.1", features = ["bluetooth-le"] }

# Bluetooth Classic (BR/EDR) - Linux only
[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.16", features = ["full"] }
nix = { version = "0.27", features = ["socket"] }

# Windows-specific (Console hiding + System Tray + Native Bluetooth)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_Com", "Win32_System_Ole"] }
tray-icon = "0.1"
winbluetooth = "0.1"
serialport = "4.2.0"

[[bin]]
name = "telegram-simulator"
path = "src/telegram_simulator.rs"

# Optional features
[features]
default = []
trouble = ["dep:trouble"]
bluey = ["dep:bluey"]
l2cap = ["dep:core_bluetooth", "dep:bluest"]
hci_support = ["dep:hci"]
pcap_export = ["dep:btsnoop-extcap"]
android_ble = ["dep:android-ble"]
